{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "gamePlay",
            "id": "56017009-6ac1-4fc8-8089-d13d6c43d688",
            "actions": [
                {
                    "name": "rollLeft",
                    "type": "Button",
                    "id": "ef7e9a8e-1538-4dbf-94c2-1b7c93f3445f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "rollRight",
                    "type": "Button",
                    "id": "1aca2571-2ecb-48b8-9a66-37a81db9d742",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "booster",
                    "type": "Button",
                    "id": "15860e12-8d3f-4b96-8492-6595ecc24c77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "brake",
                    "type": "Button",
                    "id": "84881dea-367d-4de4-aabf-92bae965556c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "look",
                    "type": "Button",
                    "id": "08c53dd2-ff18-4252-98b4-7239cb0cb0f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ae990c9-caa9-459d-9b7b-d784f5745c6e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rollLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "022daaec-40a2-40b8-aca5-b7137f280676",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rollRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "969c8116-5281-4bb7-9b3e-5e64da6f51b5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "booster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b089bf43-c76f-4159-9177-a4500a4e919e",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "256a865b-21b3-418f-907c-29e401e11d57",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}